# xpctl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: workflow.yaml
install-scripts/: unix.sh  windows.ps1
src/: main.rs
