[package]
name = "xpctl"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
dotenvy = "0.15.7"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
